# Template

./: .gitignore  CMakeLists.txt  README.md
maps/: SymbolMap.json
resources/: modinfo.json
src/: Example.cpp  Template.cpp  Template.h
src/Hooks/: MainHooks.h
src/Inputs/: MainInputs.h
src/Runtime/: UpdateRuntime.h
tools/: add_security.py  process_headers.py
